--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,20 +6,96 @@ $custom-theme-colors: (
   "p-blue": hsl(231, 69%, 60%),
   "p-red": hsl(0, 94%, 66%),
   "s-light": hsl(229, 8%, 60%),
-  "s-dark": hsl(229, 31%, 21%)
+  "s-dark": hsl(229, 31%, 21%),
 );
 
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
 $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 $utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
-$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
+$utilities-text-colors: map-loop(
+  $utilities-colors,
+  rgba-css-var,
+  "$key",
+  "text"
+);
 $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 
-
 // override bootstrap defaulf font family with google font
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
-$font-family-sans-serif: 'Rubik', sans-serif;  // bootstrap variable
-
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap");
+$font-family-sans-serif: "Rubik", sans-serif; // bootstrap variable
 
 // bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+
+/* features section start */
+
+.nav-tabs {
+  border: none;
+  align-items: center;
+  justify-content: center;
+
+  .tab-link {
+    border: none;
+    min-width: 100%;
+    margin-bottom: 0;
+
+    color: map-get($custom-theme-colors, "s-light");
+    border-bottom: 1px solid map-get($custom-theme-colors, "s-light");
+
+    &:hover,
+    &:focus {
+      border-bottom: 1px solid map-get($custom-theme-colors, "s-light");
+      color: map-get($custom-theme-colors, "p-red") !important;
+    }
+
+    &.active {
+      border-bottom: 3px solid map-get($custom-theme-colors, "p-red") !important;
+    }
+
+    @include media-breakpoint-up(md) {
+      min-width: unset;
+    }
+  }
+}
+
+/* features section end */
+
+
+/* footer start */
+footer {
+  form {
+    input {
+      min-width: 300px !important;
+      height: 50px !important;
+    }
+  
+    button {
+      width: 300px !important;
+      height: 50px;
+      
+      @include media-breakpoint-up(md) {
+        width: unset !important;
+      }
+    }
+  }
+
+  nav {
+    .container {
+      flex-direction: column !important;
+
+      @include media-breakpoint-up(md) {
+        flex-direction: row !important;
+      }
+    }
+
+    .social {
+      ul {
+        flex-direction: row !important;
+      }
+    }
+  }
+}
+
+
+/* footer end */
