--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -11493,6 +11493,183 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.row {
+  --bs-gutter-x: 0;
+}
+
+/* custom containers */
+@media (min-width: 768px) {
+  .left-container {
+    padding-left: calc((100% - 720px) / 2);
+  }
+}
+@media (min-width: 992px) {
+  .left-container {
+    padding-left: calc((100% - 960px) / 2);
+  }
+}
+@media (min-width: 1200px) {
+  .left-container {
+    padding-left: calc((100% - 1140px) / 2);
+  }
+}
+@media (min-width: 1400px) {
+  .left-container {
+    padding-left: calc((100% - 1320px) / 2);
+  }
+}
+
+@media (min-width: 768px) {
+  .right-container {
+    padding-right: calc((100% - 720px) / 2);
+  }
+}
+@media (min-width: 992px) {
+  .right-container {
+    padding-right: calc((100% - 960px) / 2);
+  }
+}
+@media (min-width: 1200px) {
+  .right-container {
+    padding-right: calc((100% - 1140px) / 2);
+  }
+}
+@media (min-width: 1400px) {
+  .right-container {
+    padding-right: calc((100% - 1320px) / 2);
+  }
+}
+
+/* background shapes */
+.background-shape-right,
+.background-shape-left {
+  position: relative;
+  z-index: 100;
+}
+.background-shape-right::before,
+.background-shape-left::before {
+  content: "";
+  width: 85%;
+  height: 75%;
+  position: absolute;
+  bottom: 0;
+  background-color: #5368df;
+  z-index: -1;
+}
+
+.background-shape-right::before {
+  right: 0;
+  border-radius: 500px 0 0 500px;
+}
+
+.background-shape-left::before {
+  left: 0;
+  border-radius: 0 500px 500px 0;
+}
+
+/* header start */
+.hidden {
+  display: none;
+}
+
+header nav {
+  /* blured background */
+}
+header nav.blured-background {
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(8px);
+}
+header nav .offcanvas-header {
+  width: 100%;
+  margin-bottom: 2em;
+}
+header nav .offcanvas-header .social {
+  position: absolute;
+  bottom: 3em;
+  left: 50%;
+  transform: translateX(-50%);
+}
+header nav .offcanvas-header .social .navbar-nav {
+  flex-direction: row;
+}
+header nav .offcanvas {
+  background-color: rgba(37, 43, 70, 0.9);
+  width: 100vw;
+}
+header nav .close-icon {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+header nav .navbar-toggler {
+  background-color: transparent;
+  border: none;
+}
+header nav .navbar-toggler:hover, header nav .navbar-toggler:focus {
+  box-shadow: none;
+}
+@media (max-width: 991.98px) {
+  header nav ul li {
+    width: 80%;
+  }
+}
+header nav .nav-link,
+header nav .nav-btn {
+  text-transform: uppercase;
+  text-align: center;
+}
+@media (max-width: 991.98px) {
+  header nav .nav-link,
+header nav .nav-btn {
+    margin: 0 auto;
+    color: #fff !important;
+    font-weight: lighter;
+    font-size: 1.2rem;
+    letter-spacing: 0.1em;
+  }
+}
+header nav .nav-link {
+  position: relative;
+}
+@media (max-width: 991.98px) {
+  header nav .nav-link {
+    padding: 1em;
+  }
+  header nav .nav-link::before {
+    content: "";
+    width: 100%;
+    height: 0.25px;
+    background-color: #c5c2c2;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+@media (max-width: 991.98px) {
+  header nav .nav-link:last-child::after {
+    content: "";
+    width: 100%;
+    height: 0.25px;
+    background-color: #c5c2c2;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
+@media (max-width: 991.98px) {
+  header nav .nav-btn {
+    padding: 0.5em;
+    width: 100%;
+    background-color: transparent;
+    border: 2px solid #fff;
+    margin-top: 1em;
+  }
+}
+header section {
+  margin-top: 100px;
+}
+
+/* header start */
 /* features section start */
 .nav-tabs {
   border: none;
@@ -11501,12 +11678,13 @@ textarea.form-control-lg {
 }
 .nav-tabs .tab-link {
   border: none;
+  padding-bottom: 1em;
   min-width: 100%;
   margin-bottom: 0;
   color: #9194a1;
   border-bottom: 1px solid #9194a1;
 }
-.nav-tabs .tab-link:hover, .nav-tabs .tab-link:focus {
+.nav-tabs .tab-link:hover {
   border-bottom: 1px solid #9194a1;
   color: #fa5757 !important;
 }
