--- a/scss/main.scss
+++ b/scss/main.scss
@@ -288,7 +288,7 @@ header {
 /* -- questions section start -- */
 
 // FIXME: I can't override this variable :(
-$accordion-button-active-icon: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>') !important;
+// $accordion-button-active-icon: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>') !important;
 
 .accordion-item {
   border-left: none;
