--- a/css/main.css
+++ b/css/main.css
@@ -4822,13 +4822,13 @@ textarea.form-control-lg {
 }
 .accordion-button::after {
   flex-shrink: 0;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   margin-left: auto;
   content: "";
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='transparent'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-size: 1.25rem;
+  background-size: 1.5rem;
   transition: transform 0.2s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -11722,8 +11722,12 @@ header section {
   border-right: none;
 }
 .accordion-item .accordion-button::after {
-  /* comment the following line to see the default arrow icon */
-  content: url("../images/icon-arrow.svg") !important;
+  content: "";
+  background-image: url("../images/icon-arrow.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 0.8rem;
+  height: 0.8rem;
 }
 
 /* -- questions section end -- */
