--- a/css/main.css
+++ b/css/main.css
@@ -4817,18 +4817,18 @@ textarea.form-control-lg {
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
 .accordion-button:not(.collapsed)::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='transparent'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("../images/icon-arrow.svg");
   transform: rotate(-180deg);
 }
 .accordion-button::after {
   flex-shrink: 0;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 0.8rem;
+  height: 0.8rem;
   margin-left: auto;
   content: "";
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='transparent'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("../images/icon-arrow.svg");
   background-repeat: no-repeat;
-  background-size: 1.5rem;
+  background-size: 0.8rem;
   transition: transform 0.2s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -11720,14 +11720,10 @@ header section {
 .accordion-item {
   border-left: none;
   border-right: none;
+  border-radius: 0 !important;
 }
-.accordion-item .accordion-button::after {
-  content: "";
-  background-image: url("../images/icon-arrow.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 0.8rem;
-  height: 0.8rem;
+.accordion-item .accordion-button {
+  border-radius: 0 !important;
 }
 
 /* -- questions section end -- */
