--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,18 @@
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 
+// colors
+$p-blue: hsl(231, 69%, 60%);
+$p-red: hsl(0, 94%, 66%);
+$s-light: hsl(229, 8%, 60%);
+$s-dark: hsl(229, 31%, 21%);
+
 // add custom theme colors to bootstrap theme colors
 $custom-theme-colors: (
-  "p-blue": hsl(231, 69%, 60%),
-  "p-red": hsl(0, 94%, 66%),
-  "s-light": hsl(229, 8%, 60%),
-  "s-dark": hsl(229, 31%, 21%),
+  "p-blue": $p-blue,
+  "p-red": $p-red,
+  "s-light": $s-light,
+  "s-dark": $s-dark,
 );
 
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
@@ -24,10 +30,13 @@ $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
 $font-family-sans-serif: "Rubik", sans-serif; // bootstrap variable
 
+
+$accordion-icon-width: 0.8rem;
+$accordion-button-icon: url("../images/icon-arrow.svg");
+$accordion-button-active-icon: url("../images/icon-arrow.svg");
+
 // bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
-
-
 
 
 /* -- global rules start -- */
@@ -97,7 +106,7 @@ section {
     height: 75%;
     position: absolute;
     bottom: 0;
-    background-color: map-get($custom-theme-colors, "p-blue");
+    background-color: $p-blue;
     z-index: -1;
   }
 }
@@ -146,7 +155,7 @@ header {
     }
 
     .offcanvas {
-      background-color: rgba(map-get($custom-theme-colors, "s-dark"), 0.9);
+      background-color: rgba($s-dark, 0.9);
       width: 100vw;
     }
 
@@ -251,16 +260,16 @@ header {
     min-width: 100%;
     margin-bottom: 0;
 
-    color: map-get($custom-theme-colors, "s-light");
-    border-bottom: 1px solid map-get($custom-theme-colors, "s-light");
+    color: $s-light;
+    border-bottom: 1px solid $s-light;
 
     &:hover {
-      border-bottom: 1px solid map-get($custom-theme-colors, "s-light");
-      color: map-get($custom-theme-colors, "p-red") !important;
+      border-bottom: 1px solid $s-light;
+      color: $p-red !important;
     }
 
     &.active {
-      border-bottom: 3px solid map-get($custom-theme-colors, "p-red") !important;
+      border-bottom: 3px solid $p-red !important;
     }
 
     @include media-breakpoint-up(md) {
@@ -277,7 +286,7 @@ header {
 #download {
   .card {
     border: none;
-    box-shadow: 0 0.8rem 1rem 0px rgba(map-get($custom-theme-colors, "p-blue"), 15%);
+    box-shadow: 0 0.8rem 1rem 0px rgba($p-blue, 15%);
     border-radius: 10px;
   }
 }
@@ -287,22 +296,13 @@ header {
 
 /* -- questions section start -- */
 
-// FIXME: I can't override this variable :(
-// $accordion-button-active-icon: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8"/></svg>') !important;
-
 .accordion-item {
   border-left: none;
   border-right: none;
+  border-radius: 0 !important;
 
   .accordion-button {
-    &::after {
-      content: '';
-      background-image: url("../images/icon-arrow.svg");
-      background-size: contain;
-      background-repeat: no-repeat;
-      width: 0.8rem;
-      height: 0.8rem;
-    }
+    border-radius: 0 !important;
   }
 }
 
