--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,43 +1,4 @@
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-
-// colors
-$p-blue: hsl(231, 69%, 60%);
-$p-red: hsl(0, 94%, 66%);
-$s-light: hsl(229, 8%, 60%);
-$s-dark: hsl(229, 31%, 21%);
-
-// add custom theme colors to bootstrap theme colors
-$custom-theme-colors: (
-  "p-blue": $p-blue,
-  "p-red": $p-red,
-  "s-light": $s-light,
-  "s-dark": $s-dark,
-);
-
-$theme-colors: map-merge($theme-colors, $custom-theme-colors);
-$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
-$utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
-$utilities-text-colors: map-loop(
-  $utilities-colors,
-  rgba-css-var,
-  "$key",
-  "text"
-);
-$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
-
-// override bootstrap defaulf font family with google font
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
-$font-family-sans-serif: "Rubik", sans-serif; // bootstrap variable
-
-
-$accordion-icon-width: 0.8rem;
-$accordion-button-icon: url("../images/icon-arrow.svg");
-$accordion-button-active-icon: url("../images/icon-arrow.svg");
-
-// bootstrap
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-
+@import "override-bootstrap";
 
 /* -- global rules start -- */
 
